LAB3/ExF.cpp.g++log.txt
C:\Prog\Edu\ProgCPP2sem\LAB3\ExF.cpp: In function 'int* my_slightly_dumb_reallocation(int*, unsigned int, unsigned int)':
C:\Prog\Edu\ProgCPP2sem\LAB3\ExF.cpp:1:6: warning: no previous declaration for 'int* my_slightly_dumb_reallocation(int*, unsigned int, unsigned int)' [-Wmissing-declarations]
 int* my_slightly_dumb_reallocation(int* source, unsigned int n_old, unsigned int n_new) {
      ^
C:\Prog\Edu\ProgCPP2sem\LAB3\ExF.cpp:2:28: error: 'NULL' was not declared in this scope
     if (n_new == 0) return NULL;
                            ^
C:\Prog\Edu\ProgCPP2sem\LAB3\ExF.cpp:4:32: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (signed int i = 0; i < n_old and i < n_new; i++) {
                                ^
C:\Prog\Edu\ProgCPP2sem\LAB3\ExF.cpp:4:46: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (signed int i = 0; i < n_old and i < n_new; i++) {
                                              ^
C:\Prog\Edu\ProgCPP2sem\LAB3\ExF.cpp:7:19: error: 'NULL' was not declared in this scope
     if (source != NULL) delete []source;
                   ^
 
"iconv.exe" не является внутренней или внешней
командой, исполняемой программой или пакетным файлом.
